--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -56,7 +56,7 @@
   &__phone {
     position: relative;
     margin-top: 47px;
-    margin-left: 17px;
+    margin-left: auto;
     width: 434px;
 
     img {
