--- a/src/sass/blocks/_benefits.scss
+++ b/src/sass/blocks/_benefits.scss
@@ -7,8 +7,8 @@
   }
   &__item {
     position: relative;
-    min-width: 558px;
-    min-height: 346px;
+    // min-width: 558px;
+    // min-height: 346px;
     img {
       width: 100%;
     }
