--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -39,6 +39,20 @@
       height: 359px;
     }
   }
+  .benefits {
+    &__descr {
+      padding: 35px 100px 42px 100px;
+      font-size: 20px;
+    }
+  }
+  .variants {
+    &__subtittle {
+      font-size: 28px;
+    }
+    &__descr {
+      font-size: 16px;
+    }
+  }
 }
 
 @media (max-width: 991px) {
@@ -143,6 +157,29 @@
   }
   .carousel__mac-control-next {
     top: 160px;
+  }
+
+  .benefits {
+    &__descr {
+      height: 130px;
+      padding: 25px 30px 25px 30px;
+      font-size: 19px;
+    }
+  }
+  .variants {
+    height: auto;
+    &__wrapper {
+      align-items: center;
+      flex-direction: column;
+    }
+    &__left {
+      width: 696px;
+      height: 100%;
+    }
+    &__right {
+      width: 696px;
+      height: 100%;
+    }
   }
 }
 @media (max-width: 767px) {
@@ -288,6 +325,26 @@
   .carousel__mac-control-next {
     top: 115px;
   }
+  .benefits {
+    &__item {
+      margin-bottom: 20px;
+    }
+    &__descr {
+      padding: 35px 100px 42px 100px;
+    }
+  }
+  .variants {
+    &__left,
+    &__right {
+      width: 92%;
+    }
+    &__subtittle {
+      font-size: 25px;
+    }
+    &__descr {
+      font-size: 14px;
+    }
+  }
 }
 
 @media (max-width: 575px) {
@@ -333,14 +390,14 @@
     }
     &-indicators {
       left: -100px;
-      &-control-prev {
-        display: none;
-        left: -55px;
-      }
-      &-control-next {
-        display: none;
-        left: 110px;
-      }
+    }
+    &-control-prev {
+      display: none;
+      left: -55px;
+    }
+    &-control-next {
+      display: none;
+      left: 110px;
     }
   }
 
@@ -383,5 +440,29 @@
   .carousel__mac-control-next {
     top: 180px;
     right: 20px;
+  }
+  .benefits {
+    &__tittle {
+      width: 280px;
+    }
+    &__descr {
+      padding: 30px 15px 30px 15px;
+      font-size: 17px;
+    }
+  }
+  .variants {
+    height: 600px;
+    &__tittle {
+      top: 40px;
+      width: 280px;
+    }
+    &__block {
+      width: 280px;
+      text-align: center;
+    }
+    &__left,
+    &__right {
+      display: block;
+    }
   }
 }
