--- a/src/sass/blocks/_modules.scss
+++ b/src/sass/blocks/_modules.scss
@@ -1,7 +1,7 @@
 .modules {
   padding: 78px 0;
   &-bg1 {
-    background: url("../../icons/question_layer.png") center
+    background: url("../../icons/question_layer.png") left 80%
       (bottom 0 / contain) no-repeat;
   }
   &-bg2 {
