--- a/src/sass/blocks/_popup.scss
+++ b/src/sass/blocks/_popup.scss
@@ -11,13 +11,12 @@
     }
   }
   &__popup {
-    //  display: none;
     width: 100%;
     height: 70px;
     position: fixed;
     top: -70px;
     left: 0;
-    background-color: rgba(0, 42, 53, 0.925);
+    background-color: #0081a1f9;
     z-index: 5;
     transition: all 0.8s;
 
@@ -30,14 +29,18 @@
       align-items: center;
       justify-content: space-between;
     }
+    &-list {
+      a {
+        font-weight: 700;
+        font-size: 12px;
+        line-height: 26px;
+        text-transform: uppercase;
+        color: white;
+        text-decoration: none;
+        &:hover {
+          color: #00c2f0;
+        }
+      }
+    }
   }
 }
-
-// @keyframes showPopup {
-//   0% {
-//     top: -70px;
-//   }
-//   100% {
-//     top: 0;
-//   }
-// }
