--- a/src/sass/blocks/_modules.scss
+++ b/src/sass/blocks/_modules.scss
@@ -24,6 +24,9 @@
   &__descr {
     max-width: 264px;
     text-align: center;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 26px;
     &_bold {
       font-weight: 700;
       font-size: 18px;
