--- a/src/sass/blocks/_carousel-mac.scss
+++ b/src/sass/blocks/_carousel-mac.scss
@@ -34,13 +34,13 @@
 .carousel__mac-control-prev-icon {
   width: 18px;
   height: 59px;
-  background-image: url("../../icons/left_arrow.png");
+  background-image: url("../icons/left_arrow.png");
   background-size: 100% 100%;
 }
 .carousel__mac-control-next-icon {
   width: 18px;
   height: 59px;
-  background-image: url("../../icons/right_arrow.png");
+  background-image: url("../icons/right_arrow.png");
   background-size: 100% 100%;
 }
 
