--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -1,7 +1,7 @@
 .header {
   min-height: 700px;
   padding: 39px 0 0 0;
-  background: url("../../img/main_bg.png") center (center/cover) no-repeat;
+  background: url("../img/main_bg.png") center (center/cover) no-repeat;
   &__hamburger {
     display: none;
   }
