--- a/src/sass/blocks/_industries.scss
+++ b/src/sass/blocks/_industries.scss
@@ -1,6 +1,6 @@
 .industries {
   padding: 73px 0 61px 0;
-  background: url("../../img/bg_second.png") center (center/cover) no-repeat;
+  background: url("../img/bg_second.png") center (center/cover) no-repeat;
   &__tittle {
     width: 648px;
     color: #ffffff;
