--- a/src/sass/blocks/_modules.scss
+++ b/src/sass/blocks/_modules.scss
@@ -1,12 +1,12 @@
 .modules {
   padding: 78px 0;
   &-bg1 {
-    background: url("../../icons/question_layer.png") left 80%
-      (bottom 0 / contain) no-repeat;
+    background: url("../icons/question_layer.png") left 80% (bottom 0 / contain)
+      no-repeat;
   }
   &-bg2 {
-    background: url("../../icons/checkmark_layer.png") center
-      (bottom 0 / contain) no-repeat;
+    background: url("../icons/checkmark_layer.png") center (bottom 0 / contain)
+      no-repeat;
   }
   &__item {
     padding: 10px 0 37px 0;
