--- a/src/sass/blocks/_variants.scss
+++ b/src/sass/blocks/_variants.scss
@@ -43,7 +43,7 @@
     padding-top: 232px;
     padding-bottom: 181px;
     padding-right: 82px;
-    background: url("../../img/cloud_storage_img.png") center (center/cover)
+    background: url("../img/cloud_storage_img.png") center (center/cover)
       no-repeat;
     display: flex;
     justify-content: end;
@@ -68,7 +68,7 @@
     padding-top: 232px;
     padding-bottom: 181px;
     padding-left: 82px;
-    background: url("../../img/server_img.png") center (center/cover) no-repeat;
+    background: url("../img/server_img.png") center (center/cover) no-repeat;
     display: flex;
     justify-content: start;
     align-items: center;
