--- a/src/sass/blocks/_benefits.scss
+++ b/src/sass/blocks/_benefits.scss
@@ -15,6 +15,9 @@
     width: 100%;
     height: 156px;
     padding: 35px 126px 42px 126px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     top: 50%;
     left: 0;
