--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -132,30 +132,9 @@
         color: #ffffff;
         text-transform: uppercase;
         font-size: 24px;
-        &::after {
-          content: "";
-          display: block;
-          position: absolute;
-          bottom: -3px;
-          width: 0;
-          height: 1px;
-          background-color: rgb(255, 255, 255);
-          transition: width 0.5s;
+        &:hover {
+          color: #00c2f0;
         }
-        &:hover:after {
-          width: 100%;
-          display: block;
-          position: absolute;
-          left: 0;
-          bottom: -3px;
-          height: 1px;
-          background-color: rgb(255, 255, 255);
-          content: "";
-          transition: width 0.5s;
-        }
-        // &:hover {
-        //   color: #00c2f0;
-        // }
       }
     }
     &-active {
